--- a/src/app/components/home/home.view.pug
+++ b/src/app/components/home/home.view.pug
@@ -1,9 +1,12 @@
+//- Header
 page-header
 
+//- Content
 .container
     .content
         .row.no-margin--sm
-            .col-xs-12.no-padding--sm.col-lg-10.offset-lg-1.col-xl-8.offset-xl-2
+            .col-xs-12.no-padding--sm.col-lg-10.offset-lg-1.col-xl-8.offset-xl-2           
                 ui-view
 
+//- User profile (modal)
 user-profile
