--- a/src/app/components/single-question/single-question.view.pug
+++ b/src/app/components/single-question/single-question.view.pug
@@ -1,19 +1,25 @@
 .single-question
 
+    //- Question
     .single-question__question
         .row
             .col-xs-12
+
                 .box-question
 
+                    //- Question - heading
                     .box-question--top
                         .row
                             .col-xs-12.col-md-9.box-question__heading--left
+
                                 .box-question__heading.box-question__heading--single
                                     .row
                                         .col-xs-2.no-padding-right
+
                                             .box-question__heading--avatar
                                                 .avatar.avatar--small(ng-click="showUserProfile(users[singleQuestion.author]['id'])")
                                                     img.avatar__img(ng-src="img/avatars/{{ singleQuestion.author }}.jpg" alt="{{ users[singleQuestion.author]['name'] }}")   
+                                       
                                         .col-xs-10.no-padding-left        
                                             .box-question__heading--question
                                                 .author
@@ -21,60 +27,80 @@
                                                     span.text--light.separator--left is asking:       
                                                 .title.title--single.hidden-sm-down  
                                                     h2 {{ singleQuestion.question }}
+
                             .col-xs-12.col-md-3.box-question__heading--right
+
                                 .box-question__heading
                                     .box-question__heading--unfollow.hidden-sm-down
                                         a(href="") unfollow
+
                                     .box-question__heading--question.hidden-md-up    
                                         .title.title--single
                                             h2 {{ singleQuestion.question }}                                        
 
+                    //- Question - content
                     .box-question--bottom
                         .row
                             .col-xs-12.col-md-9
+
                                 .box-question__content
                                     .row
                                         .col-sm-2.hidden-sm-down.no-padding-right
+
                                             .box-question__content--asked
                                         
                                         .col-xs-12.col-md-10.no-padding-left
+
                                             .box-question__content--text
                                                 p {{ singleQuestion.text }}
+
                             .col-xs-12.col-md-3
+
                                 .box-question__content.box-question__content--small
-                                    .box-question__content--unfollow.hidden-md-up                                              
-                                        a(href="") unfollow                                
+                                    .box-question__content--unfollow.hidden-md-up
+                                        a(href="") unfollow
+
                                     .box-question__content--voting
                                         voting(up-votes="{{ singleQuestion.stats.votes.up }}" down-votes="{{ singleQuestion.stats.votes.down }}")
 
+    //- Question - answer button
     .single-question__answer
         .row
             .col-xs-12
+
                 .single-question__answer--content
                     button.btn-rectangle.btn-rectangle--dark
                         span.text-uppercase.action-text.separator--right Give
                         | new answer
         
+    //- Comments
     .single-question__comments
         .row
             .col-xs-12
+
+                //- Comments - stats
                 .single-question__comments--stats
                     span.text--basic.separator--right {{ singleQuestion.answers.length }}
                     span.text--italic peers already answered {{ users[singleQuestion.author]['name'] }}
                 
+                //- Comments - list
                 .single-question__comments--list
 
                     .box-comment(ng-repeat="answer in singleQuestion.answers")
                         .row
                             .col-xs-12.col-sm-9.no-padding-right
+
                                 .row.h-100
                                     .col-xs-2.no-padding-right
+
                                         .box-comment__avatar
                                             .avatar.avatar--small(ng-click="showUserProfile(users[answer.author]['id'])")
                                                 img.avatar__img(ng-src="img/avatars/{{ answer.author }}.jpg" alt="{{ users[answer.author]['name'] }}")
 
                                     .col-xs-9.col-sm-10.no-padding-left.no-padding-right--sm
-                                        .box-comment__content(ng-class="{'box-comment__content--large': !answer.comments.length}")                                       
+
+                                        .box-comment__content(ng-class="{'box-comment__content--large': !answer.comments.length}")        
+
                                             .box-comment__content--author
                                                 a(href="" ng-click="showUserProfile(users[answer.author]['id'])") {{ users[answer.author]['name'] }}
                                                 span.text--light.separator--left commented it
@@ -85,21 +111,25 @@
                                                 p {{ answer.text }}
 
                             .col-xs-3.no-padding-left.hidden-xs-down
+
                                 .box-comment__voting
                                     voting(up-votes="{{ answer.stats.votes.up }}" down-votes="{{ answer.stats.votes.down }}")
 
                         .row.hidden-sm-up
                             .col-xs-12
+
                                 .box-comment__content--text
                                     p {{ answer.text }}        
 
                         .row.hidden-sm-up
                             .col-xs-12
+
                                 .box-comment__voting
                                     voting(up-votes="{{ answer.stats.votes.up }}" down-votes="{{ answer.stats.votes.down }}")                                        
 
                         .row(ng-if="!answer.comments.length")
                             .col-xs-12
+
                                 .single-question__answer--content
                                     button.btn-rectangle.btn-rectangle--dark
                                         span.text-uppercase.action-text Comment
@@ -107,17 +137,22 @@
                         .row(ng-repeat="comment in answer.comments")
                             .col-xs-1.hidden-sm-up.no-padding
                                 .box-comment__offset
+
                             .col-xs-11.col-sm-12
-                                .row                              
+                                .row
                                     .col-xs-12.col-sm-9.no-padding-right
+
                                         .row.h-100
                                             .col-xs-2.offset-sm-2.no-padding-left.no-padding-right
+
                                                 .box-comment__avatar
                                                     .avatar.avatar--small(ng-click="showUserProfile(users[comment.author]['id'])")
                                                         img.avatar__img(ng-src="img/avatars/{{ comment.author }}.jpg" alt="{{ users[comment.author]['name'] }}")
 
                                             .col-xs-9.col-sm-8.no-padding-left.no-padding-right--sm
+
                                                 .box-comment__content(ng-class="{'box-comment__content--large': $last}")
+
                                                     .box-comment__content--author
                                                         a(href="" ng-click="showUserProfile(users[comment.author]['id'])") {{ users[comment.author]['name'] }}
                                                         span.text--light.separator--left commented it
@@ -128,21 +163,25 @@
                                                         p {{ comment.text }}
 
                                     .col-xs-3.hidden-xs-down.no-padding-left
+
                                         .box-comment__voting
                                             voting(up-votes="{{ comment.stats.votes.up }}" down-votes="{{ comment.stats.votes.down }}") 
 
                                     .col-xs-12.hidden-sm-up.no-padding-left--sm
+
                                         .box-comment__content--text
                                             p {{ comment.text }}     
 
                                     .col-xs-12.hidden-sm-up.no-padding-left--sm
+
                                         .box-comment__voting
                                             voting(up-votes="{{ comment.stats.votes.up }}" down-votes="{{ comment.stats.votes.down }}") 
 
 
                         .row(ng-if="answer.comments.length")
                             .col-xs-12
+
                                 .single-question__answer--content
                                     button.btn-rectangle.btn-rectangle--dark
                                         span.text-uppercase.action-text.separator--right Continue
-                                        | discussion                                                
+                                        | discussion
