--- a/src/scss/layout/_all-questions.scss
+++ b/src/scss/layout/_all-questions.scss
@@ -1,25 +1,23 @@
 .all-questions {
     background: $white;
     box-shadow: 1px 0 3px $gray-200;
-}
 
-    .all-questions__question {
+    &__question {
         padding-bottom: 42px;
         border-bottom: 1px solid $gray-300;
-    }
 
-        .all-questions__question--stats {
+        &--stats {
             @include flex(space-between, flex-start, column);
-            margin-top: 20px;
             height: 155px;
+            margin-top: 20px;
 
             @include min-sm {
                 margin-top: 35px;                   
             }
 
             .stat {
-                margin-bottom: 35px;
                 white-space: nowrap;
+                margin-bottom: 35px;
 
                 @include min-lg {
                     margin-left: 30px;                    
@@ -29,6 +27,10 @@
 
         }
 
-    .all-questions__load-more {
+    }
+
+    &__load-more {
         border-top: 1px solid $gray-300;
     }
+
+}
