--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -1,15 +1,11 @@
 h1, h2, h3, h4, h5, h6, p {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 h1 {
-    color: $gray-600;
-    font-size: 2.8rem;
-    line-height: 2.8rem;
-    font-weight: 700;
+    @include font($gray-600, 2.8rem, 2.8rem, 700, -.1rem);
     font-family: $os;
-    letter-spacing: -.1rem;
     text-transform: uppercase;
     @include transition(.1s);
 
@@ -17,34 +13,16 @@ h1 {
         color: $blue-dark;
     }
 
-    @include min-sm {
-    }  
-    
 }
 
 h2 {
-    color: $blue-dark;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    font-weight: 600;
+    @include font($blue-dark, 1.8rem, 1.8rem, 600, .02rem);
     font-family: $lora;
     font-style: italic;
-    letter-spacing: .02rem;
-
-    @include min-sm {
-    }  
-
 }
 
 h3 {
-    color: $blue-dark;
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    font-weight: 600;
-
-    @include min-sm {
-    }  
-
+    @include font($blue-dark, 1.8rem, 1.8rem, 600);
 }
 
 p {
